test/classes/override/override-missing2.good
override-missing2.chpl:7: error: Child.f override keyword required for method matching signature of superclass method
